@@ -1,5 +1,9 @@
 2015-02-05  Jerold Haas  <jeroldhaas@gmail.com>
 
+	* MainToolbar.cs: 
+
+2015-02-05  Jerold Haas  <jeroldhaas@gmail.com>
+
 	* SearchEntry.cs: 
 
 2015-01-30  Jerold Haas  <jeroldhaas@gmail.com>
